# upload

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  loader.css  tailwind.config.js
assets/: dog.json  main-78f31a5f8e0d6253.css  main.css  tailwind-06f0c68d9addf206.css  tailwind.css
src/: footer.rs  header.rs  main.rs
src/canvas/: canvas.js  canvas.rs  canvas1.js
src/coffee/: coffee.rs
src/components/: dialog.rs  mod.rs  navbar.rs  pulse_effect.rs
src/home/: home.rs
src/jot/: jot.rs  mod.rs
src/legal/: legal.rs  mod.rs
src/navbar/: navbar.rs
src/service/: service.rs
src/thank_you/: mod.rs  thank_you.rs
src/todo/: todo.rs
src/upload/: upload.rs
src/user_form/: user_form.rs
src/verification/: verification.rs
