[package]
name = "doxle"
version = "0.1.0"
authors = ["doxle <design@doxle.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
dioxus = { version = "0.6.0", features = ["web", "router"] }
# features = "0.10.0"
reqwest = { version = "0.12.12", features = ["json"] }
round = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
zip = { version = "2.2.2", default-features = false, features = [
    "flate2",
], optional = false }
flate2 = { version = "1.0", default-features = false, features = [
    "rust_backend",
] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt"] }
futures = "0.3.31"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
gloo-timers = "0.3.0"
dioxus-motion = "0.2.3"
future-utils = "0.12.1"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
